// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add-dev-server-targets-to-cypress-configs migration should add dev server targets for default, production, and ci 1`] = `
"import { defineConfig } from "cypress";
import { nxE2EPreset } from "@nx/cypress/plugins/cypress-preset";

export default defineConfig({
  e2e: {
    ...nxE2EPreset(__filename, {
      devServerTargets: {
        default: "my-app:serve",
        production: "my-app:serve:production",
      },
      ciDevServerTarget: "my-app:serve-static",
    }),
  },
});
"
`;

exports[`add-dev-server-targets-to-cypress-configs migration should add devServerTargets to cypress.config.ts 1`] = `
"import { defineConfig } from "cypress";
import { nxE2EPreset } from "@nx/cypress/plugins/cypress-preset";

export default defineConfig({
  e2e: {
    ...nxE2EPreset(__filename, {
      devServerTargets: { default: "my-app:serve" },
    }),
  },
});
"
`;

exports[`add-dev-server-targets-to-cypress-configs migration should not add nx metadata for if there are none to add 1`] = `
"import { defineConfig } from "cypress";
import { nxE2EPreset } from "@nx/cypress/plugins/cypress-preset";

export default defineConfig({
  e2e: {
    ...nxE2EPreset(__filename),
  },
});
"
`;

exports[`add-dev-server-targets-to-cypress-configs migration should update existing options with dev server targets for default, production, and ci 1`] = `
"import { defineConfig } from "cypress";
import { nxE2EPreset } from "@nx/cypress/plugins/cypress-preset";

export default defineConfig({
  e2e: {
    ...nxE2EPreset(__filename, {
      bundler: "vite",
      devServerTargets: {
        default: "my-app:serve",
        production: "my-app:serve:production",
      },
      ciDevServerTarget: "my-app:serve-static",
    }),
  },
});
"
`;
